Added Image for Resume file

--- a/Resume.html
+++ b/Resume.html
@@ -20,7 +20,7 @@
       <tr>
         <td>
           <img
-            src="/Images/person.jpg"
+            src="/PngItem_533248.png"
             alt="Image of the Person"
             width="200px"
           />
